# ICON-sc

./: .editorconfig  .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  conftest.py  opencode.json  pyproject.toml
.claude/: settings.json
.claude/commands/: implement-plan.md  implement-step.md  review-step.md  review-work.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: docs.yml  lint.yml  test-cpu.yml  test-gpu.yml  test-mpi.yml
.opencode/command/: implement-plan.md  implement-step.md  review-step.md  review-work.md
.opencode/plugins/: spec-freeze-guard.js
benchmarks/: README.md  s05_dispatch.py
benchmarks/dispatch_overhead/: jw_step.py
constraints/: README.md  cpu-ci.txt  gpu-cuda12.txt
development/: DECISIONS.md  README.md  REGISTRY.md
development/ADRs/: 0000-development-tree-reorganization.md  0001-content-frozen-records.md  0002-decision-register-and-adrs.md  0003-document-naming-scheme.md  0004-docs-stack.md  0005-gridgen-adoption.md  0006-work-tree-and-kind-prefixed-names.md  0007-kebab-everywhere-flat-reports.md  0008-relax-push-guardrail-to-ask.md  README.md
development/adr/: 0001-development-tree-reorganization.md  0002-content-frozen-records.md  0003-decision-register-and-adrs.md  045_decision_register_and_adrs_adr.md  046_document_naming_scheme_adr.md  README.md
development/archive/: README.md  plan-tree-map.md  plan_tree_map.md
development/ideas/: 040_p5_tiers_t2_t3_idea.md  041_p6_differentiable_distributed_da_idea.md  042_p7_presets_docs_anemoi_idea.md  P2_distributed.md  P3_full_physics.md  P4_ingestion_realdata.md  P5_tiers_t2_t3.md  P6_differentiable_distributed_da.md  P7_presets_docs_anemoi.md  README.md
development/plans/: 020_gpu_validation_plan.md  021_ci_hardening_plan.md  022_plan_hash_config_digest_plan.md  023_upstream_reports_plan.md  024_pr_publication_plan.md  025_cf_multistage_t1_plan.md  030_author_phase_specs_plan.md  033_structure_migration_plan.md  20_gpu_validation.md  21_ci_hardening.md  22_plan_hash_config_digest.md  23_upstream_reports.md  24_pr_publication.md  25_cf_multistage_t1.md  28_docs_implementation.md  30_author_phase_specs.md  33_structure_migration.md  README.md  S03_component_abi_t0.md  S04_coupling_algebra.md  S13_diffusion_jw_l4.md  S14_plan_through_dycore.md
development/policies/: README.md  agent-workflow.md  agent_workflow.md  coding-conventions.md  docs-boundary.md  docs_boundary.md  document-kinds.md  document_kinds.md  naming-conventions.md  naming_conventions.md  records_and_liveness.md  reference-mining.md  reference_mining.md  repo-layout.md  repo_layout.md  repository-layout.md  review-protocol.md  review_protocol.md  verification-gates.md  verification_gates.md
development/records/: 000_overview_record.md  031_plan_structure_migration_record.md  049_work_structure_iteration_record.md  28_docs_implementation_REPORT.md  IMPLEMENTATION_REPORT.md  README.md
development/records/001_repo_scaffold_record/: STATUS.md
development/records/004_coupling_algebra_record/: STATUS.md
development/records/027_docs_plan_record/: 27_docs_plan.md
development/records/029_plan_structure_record/: 29_plan_structure.md
development/records/035_naming_migration_record/: REPORT.md
development/records/27_docs_plan/: 27_docs_plan.md
development/records/29_plan_structure/: 29_plan_structure.md
development/records/32_docs_development_structure/: 32_docs_development_structure.md
development/records/33_structure_migration/: REPORT.md
development/records/S04_coupling_algebra/: STATUS.md
development/records/S10_ftier_column_gradients/: STATUS.md
development/records/S13_diffusion_jw_l4/: STATUS.md
development/references/: README.md  gt4py.md  icon-fortran.md  icon-grid-generator.md  icon-tutorial-2025.md  icon4py.md  icon_fortran.md  icon_grid_generator.md  icon_tutorial_2025.md  lock.toml  sympl.md  tasmania.md  ubbiali-thesis.md  ubbiali_thesis.md
development/references/local/: README.md
development/specs/: 002_core_state_contracts_spec.md  README.md
development/work/: README.md
development/work/0001-repo-scaffold/: spec.md
development/work/0004-coupling-algebra/: report.md
development/work/0005-vault-plan-t1/: plan.md
development/work/0006-vertical-grid-thermo/: spec.md
development/work/0011-icon-grid-metrics/: plan.md  spec.md
development/work/0012-nonhydro-hosting/: plan.md  spec.md
development/work/0013-diffusion-jw-l4/: plan.md  spec.md
development/work/0023-upstream-reports/: plan.md
development/work/0028-docs-implementation/: plan.md
development/work/0029-plan-structure/: report.md
development/work/0032-docs-development-structure/: report.md
docs/: conf.py  glossary.md  index.md  names_registry.md
docs/api/: README.md  core.md  core_components.md  core_contracts.md  core_coupling.md  core_functional.md  core_io.md  core_plan.md  core_state.md  icon_components.md  icon_grid.md  icon_names.md  icon_presets.md  icon_thermo.md  index.md
docs/architecture/: icon-sc_architecture.md  symcon_architecture.md  symcon_repo_layout.md
docs/tutorials/: 00_what_is_icon-sc.md  00_what_is_symcon.md  01_state_fields_grids.md  02_first_run_scm.md  index.md
envs/: README.md
envs/spack/: README.md
examples/: 01_scm_column.py  02_jw_baroclinic.py  07_gradient_scm.py  README.md
plan/: 00_OVERVIEW.md  TRUNK_DECISIONS.md
plan/outlines/: P4_ingestion_realdata.md  P5_tiers_t2_t3.md  P7_presets_docs_anemoi.md
plan/prompts/: 10_REVIEW_PROTOCOL.md  20_gpu_validation.md  25_cf_multistage_t1.md  30_author_phase_specs.md  README.md
references/: README.md
tools/: README.md  names_audit.py  run_gate.py  spec_freeze_guard.py
validation/: README.md
validation/L4_idealized/: README.md  make_reference.py  test_jw.py
validation/L8_gradients/: README.md  run_l8.py
validation/data/: README.md
(+121 files in other folders)
