# ICON-sc workspace root — virtual project (not installable); members under packages/.
# Dependency pins live in constraints/ (S01); packages declare lower bounds only.

[project]
name = "icon-sc-workspace"
version = "0.0.0"
description = "ICON-sc monorepo workspace root"
# Upper bound from gt4py 1.1.10 (requires-python <3.15); see constraints/README.md.
requires-python = ">=3.10,<3.15"
dependencies = [
  "icon-sc-core",
  "icon-sc-icon",
  "icon-sc-bridges",
]

[dependency-groups]
dev = [
  "hypothesis>=6.100",
  # S06 datatest bridge: icon4py serialbox fixtures (pinned pair, constraints/cpu-ci.txt).
  "icon-sc-icon[datatest]",
  # task 26: synthetic grid fixtures (pin in constraints/cpu-ci.txt).
  "icon-sc-icon[gridgen]",
  # S10 F-tier: CPU jax for the functional lowering + L8 gradient tests (pin recorded in
  # constraints/cpu-ci.txt). mpi4jax (the rest of the [jax] extra) arrives with the
  # distributed F-tier step; pulling it here would drag an MPI toolchain into the CPU gate.
  "jax>=0.6.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-mpi>=0.6",
  "ruff>=0.9",
  "mypy>=1.13",
  "import-linter>=2.1",
  "pre-commit>=4.0",
  "matplotlib>=3.8",
  # task 28: docs build — plan 27_docs_plan §3.3 (TD-2); pins in constraints/cpu-ci.txt.
  "sphinx>=8.1",
  "myst-parser>=4.0",
  "furo>=2025.12.19",
]

[tool.uv]
package = false
# gt4py depends on dace with only pre-release 2.x on PyPI (dace>=2.0.0a3).
prerelease = "allow"

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
icon-sc-core = { workspace = true }
icon-sc-icon = { workspace = true }
icon-sc-bridges = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py310"
src = [
  "packages/icon-sc-core/src",
  "packages/icon-sc-icon/src",
  "packages/icon-sc-bridges/src",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "D"]
# task 28 (TD-3, plan 27_docs_plan §4): Google docstring convention, enforced going
# forward; the existing corpus is narrative reST prose that legitimately fails the
# rules below TODAY. Each entry is corpus baseline, plan 27 §4; shrink-only.
ignore = [
  "D1",   # undocumented-public-* family: 577 findings / 122 public defs; corpus baseline, plan 27 §4; shrink-only
  "D205", # missing-blank-line-after-summary: 79 in corpus; corpus baseline, plan 27 §4; shrink-only
  "D209", # new-line-after-last-paragraph: 66 in corpus; corpus baseline, plan 27 §4; shrink-only
  "D403", # first-word-uncapitalized: 15 in corpus (< 20, but green-without-docstring-edits is binding; the autofix would rewrite literal names, e.g. numpy -> Numpy); corpus baseline, plan 27 §4; shrink-only
  "D415", # missing-terminal-punctuation: 1 in corpus (< 20, same green rule); corpus baseline, plan 27 §4; shrink-only
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["icon_sc"]

[tool.mypy]
python_version = "3.10"
namespace_packages = true
explicit_package_bases = true
mypy_path = [
  "packages/icon-sc-core/src",
  "packages/icon-sc-icon/src",
  "packages/icon-sc-bridges/src",
]

# The AGENTS.md gate is `mypy --strict -p icon_sc.core` (strict is not a per-module
# option); icon/bridges tighten later.
[[tool.mypy.overrides]]
module = "cupy.*"
ignore_missing_imports = true

# cftime ships no py.typed marker (S02 time.py).
[[tool.mypy.overrides]]
module = "cftime.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["packages"]
addopts = ["-ra", "--strict-markers"]

# array_api_compat ships no py.typed marker (S06 thermo.py).
[[tool.mypy.overrides]]
module = "array_api_compat.*"
ignore_missing_imports = true
